[Enhancement] add min/max stats by meta-scan (#61155)
Signed-off-by: Seaven <seaven_7@qq.com>